third_party/blink/web_tests/external/wpt/fullscreen/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
PASS Partial interface Element: original interface defined
PASS Partial interface Document: original interface defined
PASS Partial interface mixin DocumentOrShadowRoot: original interface mixin defined
PASS Document interface: attribute fullscreenEnabled
PASS Document interface: attribute fullscreen
PASS Document interface: operation exitFullscreen()
PASS Document interface: attribute onfullscreenchange
PASS Document interface: attribute onfullscreenerror
PASS Document interface: attribute fullscreenElement
PASS ShadowRoot interface: attribute fullscreenElement
PASS Element interface: operation requestFullscreen(FullscreenOptions)
PASS Element interface: attribute onfullscreenchange
PASS Element interface: attribute onfullscreenerror
Harness: the test ran to completion.

